tests/ui/missing_intopy.stderr
error[E0599]: the method `into_py_kind` exists for reference `&Blah`, but its trait bounds were not satisfied
 --> tests/ui/missing_intopy.rs:4:14
  |
1 | struct Blah;
  | ----------- doesn't satisfy `Blah: IntoPy<Py<PyAny>>`, `Blah: IntoPyObject<'_, PyAny>` or `Blah: IntoPyObjectKind`
...
4 | fn blah() -> Blah{
  |              ^^^^ method cannot be called on `&Blah` due to unsatisfied trait bounds
  |
  = note: the following trait bounds were not satisfied:
          `Blah: IntoPyObject<'_, PyAny>`
          which is required by `Blah: IntoPyObjectKind`
          `Blah: IntoPy<Py<PyAny>>`
          which is required by `&Blah: IntoPyKind`
          `&Blah: IntoPyObject<'_, PyAny>`
          which is required by `&Blah: IntoPyObjectKind`
note: the traits `IntoPy` and `IntoPyObject` must be implemented
 --> src/conversion.rs
  |
  | pub trait IntoPy<T>: Sized {
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^
...
  | pub trait IntoPyObject<'py, T>: Sized {
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  = help: items from traits can only be used if the trait is implemented and in scope
  = note: the following traits define an item `into_py_kind`, perhaps you need to implement one of them:
          candidate #1: `IntoPyKind`
          candidate #2: `IntoPyObjectKind`
